--- a/meteorProjects/score-keep/package.json
+++ b/meteorProjects/score-keep/package.json
@@ -7,7 +7,9 @@
   "dependencies": {
     "babel-runtime": "^6.20.0",
     "meteor-node-stubs": "~0.2.4",
+    "numeral": "^2.0.6",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "react-flip-move": "^2.10.0"
   }
 }
